Refactor: rename recipe handler funcs
