# docs/swagger.json
@@ -247,7 +247,7 @@
                 }
             },
             "post": {
-                "description": "Create a new measure record based on the given payload.",
+                "description": "Creates a new measure record based on the given payload.",
                 "consumes": [
                     "application/json"
                 ],
@@ -335,7 +335,7 @@
                 }
             },
             "put": {
-                "description": "Update a measure with the given ID",
+                "description": "Updates a measure with the given ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -430,7 +430,7 @@
         },
         "/product-categories": {
             "get": {
-                "description": "Find product categories with optional filters",
+                "description": "Finds product categories with optional filters",
                 "consumes": [
                     "application/json"
                 ],
@@ -495,7 +495,7 @@
                 }
             },
             "post": {
-                "description": "Create a new product category",
+                "description": "Creates a new product category",
                 "consumes": [
                     "application/json"
                 ],
@@ -541,7 +541,7 @@
         },
         "/product-categories/{category_id}": {
             "get": {
-                "description": "Get a product category by ID",
+                "description": "Finds a product category by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -583,7 +583,7 @@
                 }
             },
             "put": {
-                "description": "Update an existing product category by providing the ID and updated fields in the request body",
+                "description": "Updates an existing product category by providing the ID and updated fields in the request body",
                 "consumes": [
                     "application/json"
                 ],
@@ -1253,7 +1253,7 @@
         },
         "/recipes": {
             "get": {
-                "description": "Find recipes based on the provided filter",
+                "description": "Finds recipes based on the provided filter",
                 "consumes": [
                     "application/json"
                 ],
@@ -1363,7 +1363,7 @@
         },
         "/recipes/{recipe_id}": {
             "get": {
-                "description": "Find a recipe by its ID",
+                "description": "Finds a recipe by its ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -1495,14 +1495,17 @@
         },
         "/recipes/{recipe_id}/ingredients": {
             "get": {
-                "description": "Find recipe ingredients by recipe ID",
+                "description": "Adds n ingredient to a recipe",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Recipes"
                 ],
-                "summary": "Find recipe ingredients by recipe ID",
+                "summary": "Add an ingredient to a recipe",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1510,6 +1513,15 @@
                         "name": "recipe_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Create ingredient payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateIngredient"
+                        }
                     }
                 ],
                 "responses": {
@@ -1579,7 +1591,7 @@
                 }
             },
             "delete": {
-                "description": "Delete an ingredient from a recipe",
+                "description": "Removes an ingredient from a recipe",
                 "consumes": [
                     "application/json"
                 ],
@@ -1589,7 +1601,7 @@
                 "tags": [
                     "Recipes"
                 ],
-                "summary": "Delete an ingredient from a recipe",
+                "summary": "Remove an ingredient from a recipe",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1787,12 +1799,12 @@
                         "required": true
                     },
                     {
-                        "description": "Step place.",
-                        "name": "place",
+                        "description": "Request body",
+                        "name": "playload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/dto.DeleteRecipeStep"
                         }
                     }
                 ],
@@ -1820,6 +1832,28 @@
         }
     },
     "definitions": {
+        "dto.CreateIngredient": {
+            "type": "object",
+            "required": [
+                "id_measure",
+                "id_product",
+                "quantity"
+            ],
+            "properties": {
+                "id_measure": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "id_product": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "quantity": {
+                    "type": "integer",
+                    "example": 10
+                }
+            }
+        },
         "dto.CreateMeasure": {
             "type": "object",
             "required": [
@@ -1915,6 +1949,18 @@
             ],
             "properties": {
                 "id_product": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "dto.DeleteRecipeStep": {
+            "type": "object",
+            "required": [
+                "place"
+            ],
+            "properties": {
+                "place": {
                     "type": "integer",
                     "example": 1
                 }
