# internal/api/routes/handlers/v1/recipe/router.go
@@ -19,26 +19,26 @@ func NewRouter(
 	repository := repo.New(client)
 	service := svc.New(repository)
 	handler := New(service, log)
-	router.Get("/", handler.FindRecipes)
-	router.Post("/", jware.DeserializeUser, handler.CreateRecipe)
+	router.Get("/", handler.FindMany)
+	router.Post("/", jware.DeserializeUser, handler.Create)
 	router.Route(context.RecipeID.Path(), func(router fiber.Router) {
 		router.Use(context.New(log, context.RecipeID))
-		router.Get("/", handler.FindRecipeByID)
-		router.Put("/", jware.DeserializeUser, handler.UpdateRecipe)
-		router.Delete("/", jware.DeserializeUser, handler.DeleteRecipe)
-		router.Patch("/", jware.DeserializeUser, handler.RestoreRecipe)
+		router.Get("/", handler.FindOne)
+		router.Put("/", jware.DeserializeUser, handler.Update)
+		router.Delete("/", jware.DeserializeUser, handler.Delete)
+		router.Patch("/", jware.DeserializeUser, handler.Restore)
 		router.Route("/ingredients", func(router fiber.Router) {
 			router.Get("/", handler.FindRecipeIngredients)
-			router.Post("/", jware.DeserializeUser, handler.CreateIngredient)
+			router.Post("/", jware.DeserializeUser, handler.AddIngredient)
 			router.Put("/", jware.DeserializeUser, handler.UpdateIngredient)
-			router.Delete("/", jware.DeserializeUser, handler.DeleteIngredient)
+			router.Delete("/", jware.DeserializeUser, handler.RemoveIngredient)
 		})
 		router.Route("/steps", func(router fiber.Router) {
-			router.Get("/", handler.FindRecipeSteps)
+			router.Get("/", handler.FindSteps)
 			router.Route(context.StepID.Path(), func(router fiber.Router) {
 				router.Use(context.New(log, context.StepID))
-				router.Post("/", jware.DeserializeUser, handler.CreateRecipeStep)
-				router.Delete("/", jware.DeserializeUser, handler.DeleteRecipeStep)
+				router.Post("/", jware.DeserializeUser, handler.AddStep)
+				router.Delete("/", jware.DeserializeUser, handler.RemoveStep)
 			})
 		})
 	})
